# solana-chest-game

./: .env.template  .eslintrc.json  .gitignore  .prettierrc  Anchor.toml  README.md  package-lock.json  package.json
programs/treasure-chest-program/: Cargo.toml
programs/treasure-chest-program/src/: lib.rs
scripts/: init_chest.ts
tests/: treasure-chest-program.ts
